fixed app-height issue on mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+:root {
+  --app-height: 100%;
+  --mobile-map-height: calc(100% - 350px)
+}
+
 .App {
   height: 100vh;
+  height: var(--app-height);
   text-align: center;
   font-family: sans-serif;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -12,6 +18,9 @@
   user-select: none; /* Non-prefixed version, currently
                                 supported by Chrome, Opera and Firefox */
 }
+
+
+
 
 /* #root {
   height: 98vh;
