--- a/src/View/HomePage/style.css
+++ b/src/View/HomePage/style.css
@@ -1,6 +1,6 @@
 body {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   position: fixed;
   top: 0;
   overflow: hidden;
@@ -151,6 +151,9 @@ body {
 }
 
 @media screen and (max-width: 850px) {
+  /* #root {
+   overflow: scroll;
+  } */
   #map-box,
   #chart-box,
   #table-box {
@@ -179,6 +182,7 @@ body {
   }
 
   #footer-box {
+    z-index: 99999999;
     position: relative;
     height: 120px;
   }
@@ -194,7 +198,7 @@ body {
     bottom: 0;
     height: 100%;
     width: 100%;
-    padding: 50px 10px 100px 10px;
+    padding: 100px 10px 100px 10px;
     margin: 0;
     z-index: 0;
   }
@@ -202,7 +206,7 @@ body {
   #map-box {
     left: 0;
     top: 0;
-    height: 100%;
+    height: calc(var(--app-height) - 290px);
     width: 100%;
     padding: 0;
     margin: 0;
@@ -212,7 +216,7 @@ body {
   #map-box-data {
     left: 0;
     bottom: 0;
-    height: 100%;
+    height: calc(var(--app-height) - 350px);
     width: 100%;
     padding-right: 0;
     padding-left: 0;
