--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -23,12 +23,14 @@
   }
   .footer-parent-div img {
     height: 30px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
+    margin-top: 2px;
     /* margin-right: 20px; */
   }
   .footer-parent-div p {
     font-size: .8em;
-    margin: 10px 10px;
+    line-height: .8em;
+    margin: 10px 0 0 0;
   }
 
 }
